gcc/testsuite/rust/rustc/ui/parser/removed-syntax-static-fn.rs
struct S;

impl S {
    static fn f() {}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
}

fn main() {}

